[package]
name = "xmb_lib"
version = "0.1.0"
authors = ["ScanMountGoat"]
edition = "2021"

[dependencies]
binrw = "0.14.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1.0", features = ["derive"], optional = true }
xmltree = { version = "0.10.3", features = ["attribute-order"] }
indexmap = "1.7.0"
xc3_write = "0.10.0"

[dev-dependencies]
indoc = "2.0"

[features]
serde = ["dep:serde", "indexmap/serde"]