[package]
name = "xmb_lib_xml"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmb_lib = { path = "../xmb_lib" }
xmltree = { version = "0.10.3", features = ["attribute-order"] }